Bug 1159081 - Bad PR_SetEnv usage for Gonk. r=dhylands, r=rstrong